--- a/bestseller.html
+++ b/bestseller.html
@@ -130,8 +130,7 @@
 
         </section>
 
-
-        
+<section class="club-banner">FC BARCELONA</section>        
     <footer class="main-footer">
         <div class="footer-content">
             <div class="footer-section">
