--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
          <section class="unix_coll">
             <h2>unisex Collection</h2> <br>
-              <p class="h22"> New Festival Collection </p>
+              <p class="fest"> New Festival Collection </p>
             <p class="main_shopnow">Shop now</p>
             
         </section>
@@ -172,7 +172,7 @@
         </section>
 
     </main>
-
+<section class="club-banner">FC BARCELONA</section>
     <footer class="main-footer">
         <div class="footer-content">
             <div class="footer-section">
