--- a/bestseller.html
+++ b/bestseller.html
@@ -18,9 +18,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bestseller.html">bestseller</a></li>
                 
-                <li><a href="#jerseys">KITS</a></li>
-                <li><a href="#accessories">Accessories</a></li>
-                <li><a href="#equipment">Equipment</a></li>
+                <li><a href="kits.html">KITS</a></li>
+                <li><a href="training.html">Equipment</a></li>
+                <li><a href="accessories.html">Accessories</a></li>                
             </ul>
         </nav>
         <div class="search-container">
@@ -28,6 +28,7 @@
             <button type="button" aria-label="Search">🔍</button>
         </div>
     </header>
+    
     <section class="bestseller">
             <h2>Bestseller</h2> <br>              
             <p class="">Bestsellers</p>
