--- a/accessories.html
+++ b/accessories.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accessories - FC Barcelona Store</title>
     <link rel="icon" type="image/png" href="images/fcb_logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header class="main-header">
@@ -24,7 +24,6 @@
                 <li><a href="kits.html">Kits</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="equipment.html">Equipment</a></li>
             </ul>
         </nav>
         <div class="search-container">
@@ -34,35 +33,94 @@
     </header>
 
     <main>
+        <section class="accessories">
+            <h2>Accessories</h2>            
+        </section>
         <section class="featured-products">
             <h2>Accessories Collection</h2>
             <div class="products-grid">
                 <article class="product-card">
-                    <img src="images/accessories1.jpg" alt="FC Barcelona Cap" class="product-image">
-                    <h3>FC Barcelona Cap</h3>
-                    <p class="price">€24.99</p>
+                    <img src="images/access10.jpg" alt="FC Barcelona Cap" class="product-image">
+                    <h3>FC Barcelona Collection</h3>
+                    <p class="price">ETB 1,949.2</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/accessories1.jpg" alt="FC Barcelona Scarf" class="product-image">
-                    <h3>FC Barcelona Scarf</h3>
-                    <p class="price">€29.99</p>
+                    <img src="images/access11.jpg" alt="FC Barcelona Scarf" class="product-image">
+                    <h3>FC Barcelona brecelet</h3>
+                    <p class="price">ETB 909.11</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/accessories1.jpg" alt="FC Barcelona Backpack" class="product-image">
-                    <h3>FC Barcelona Backpack</h3>
-                    <p class="price">€49.99</p>
+                    <img src="images/access12.jpg" alt="FC Barcelona Backpack" class="product-image">
+                    <h3>FC Barcelona brecelet</h3>
+                    <p class="price">ETB 899.28</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/accessories1.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <img src="images/access13.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Ball  </h3>
+                    <p class="price">ETB 999.62</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access14.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Jersey </h3>
+                    <p class="price">ETB 1,559.22</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access15.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Jacket  </h3>
+                    <p class="price">ETB 5,559.98</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access16.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Bag </h3>
+                    <p class="price">ETB 3,559.12</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access17.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Hats</h3>
+                    <p class="price">ETB 2,009.67</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access18.jpg" alt="FC Barcelona Water Bottle" class="product-image">
                     <h3>FC Barcelona Water Bottle</h3>
-                    <p class="price">€19.99</p>
+                    <p class="price">ETB 1,559.22</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
+                
+                <article class="product-card">
+                    <img src="images/access3" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Water Bottle and Bag</h3>
+                    <p class="price">ETB 7,439.45</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access4.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Jacket</h3>
+                    <p class="price">ETB 2,449.72</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access6.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Stadium</h3>
+                    <p class="price">ETB 1,109.28</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/access8.jpg" alt="FC Barcelona Water Bottle" class="product-image">
+                    <h3>FC Barcelona Stadium</h3>
+                    <p class="price">ETB 1,259.45</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>                             
             </div>
         </section>
+        <section class="club-banner">FC BARCELONA</section>
     </main>
 
     <footer class="main-footer">
@@ -76,11 +134,15 @@
                 </ul>
             </div>
             <div class="footer-section">
-                <h4>CUSTOMER SERVICE</h4>
+                <h4>HELP CENTER</h4>
                 <ul>
                     <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Help Portal</a></li>
                     <li><a href="#">Shipping & Delivery</a></li>
                     <li><a href="#">Returns & Exchanges</a></li>
+                    <li><a href="#">Track order information</a></li>
+                    <li><a href="#">Order Issues</a></li>
+                    <li><a href="#">Account & website </a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -97,11 +159,13 @@
                     <a href="#" class="social-link"> <img src="images/fb_icon.png"></a>
                     <a href="#" class="social-link"> <img src="images/ig_icon.png"></a>
                     <a href="#" class="social-link"> <img src="images/x_icon.png"></a>
+                    <a href="#" class="social-link"> <img src="images/yt_icon.png"></a>
+                    <a href="#" class="social-link"> <img src="images/tt_icon.png"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 FC Barcelona. All rights reserved.</p>
+            <p>&copy; 2025 FC Barcelona. All rights reserved.</p>
         </div>
     </footer>
 
