--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <li><a href="kits.html">Kits</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="equipment.html">Equipment</a></li>
             </ul>
         </nav>
         <div class="search-container">
@@ -36,42 +35,36 @@
         </section>
 
         <section class="featured-products">
-            <h2> </h2>
+            <h2>Featured Products</h2>
             <div class="products-grid">
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Home Jersey 2023/24" class="product-image">
-                    <h3>Home Jersey 2023/24</h3>
-                    <p class="price">€89.99</p>
+                    <img src="images/home2.jpg" alt="Home Jersey 2023/24" class="product-image">
+                    <h3>Jersey</h3>
+                    <p class="price">ETB 3,019.12</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Away Jersey 2023/24" class="product-image">
-                    <h3>Away Jersey 2023/24</h3>
-                    <p class="price">€89.99</p>
+                    <img src="images/home1.webp" alt="Away Jersey 2023/24" class="product-image">
+                    <h3>Jersey</h3>
+                    <p class="price">ETB 1219</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Training Kit" class="product-image">
+                    <img src="images/home3.jpg" alt="Training Kit" class="product-image">
                     <h3>Training Kit</h3>
-                    <p class="price">€69.99</p>
+                    <p class="price">ETB 5,459.22</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/ball.jpg" alt="Official Match Ball" class="product-image">
-                    <h3>Official Match Ball</h3>
-                    <p class="price">€29.99</p>
+                    <img src="images/home4.jpg" alt="Official Match Ball" class="product-image">
+                    <h3>Jersey </h3>
+                    <p class="price">ETB 2,339.22</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
-                 <article class="product-card">
-                    <img src="images/ball.jpg" alt="Official Match Ball" class="product-image">
-                    <h3>Official Match Ball</h3>
-                    <p class="price">€29.99</p>
-                    <button class="buy-button">Buy Now</button>
-                </article>
-                 <article class="product-card">
-                    <img src="images/ball.jpg" alt="Official Match Ball" class="product-image">
-                    <h3>Official Match Ball</h3>
-                    <p class="price">€29.99</p>
+                <article class="product-card">
+                    <img src="images/home5.jpg" alt="Official Match Ball" class="product-image">
+                    <h3>Jersey </h3>
+                    <p class="price">ETB 2,339.22</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
             </div>
@@ -86,30 +79,38 @@
             <h2>New Arrivals</h2>
             <div class="product_row">
                 <div class="product_box">
-                    <img src="images/jersey1.jpg" alt="New Jersey">
+                    <img src="images/unisex1.jpg" alt="New Jersey">
                     <h3>Home Jersey 2024</h3>
-                    <p class="price">€89.99</p>
+                    <p class="price">ETB 3,555</p>
                     <button class="buy_btn">Buy Now</button>
                 </div>
                 <div class="product_box">
-                    <img src="images/jersey2.jpg" alt="Training Kit">
-                    <h3>Training Kit</h3>
-                    <p class="price">€69.99</p>
+                    <img src="images/unisex2.jpg" alt="Training Kit">
+                    <h3>Kit</h3>
+                    <p class="price">ETB 4,6792</p>
                     <button class="buy_btn">Buy Now</button>
                 </div>
                 <div class="product_box">
-                    <img src="images/jersey3.jpg" alt="Away Jersey">
-                    <h3>Away Jersey 2024</h3>
-                    <p class="price">€89.99</p>
+                    <img src="images/unisex3.jpg" alt="Away Jersey">
+                    <h3>Jersey</h3>
+                    <p class="price">ETB 5,324</p>
+                    <button class="buy_btn">Buy Now</button>
+                </div>
+                  <div class="product_box">
+                    <img src="images/unisex4.jpg" alt="Away Jersey">
+                    <h3>Jersey</h3>
+                    <p class="price">ETB 5,342</p>
+                    <button class="buy_btn">Buy Now</button>
+                </div>
+                  <div class="product_box">
+                    <img src="images/unisex5.jpg" alt="Away Jersey">
+                    <h3>Jersey</h3>
+                    <p class="price">ETB 3,454</p>
                     <button class="buy_btn">Buy Now</button>
                 </div>
             </div>
         </section>
-
-        <section class="banner">
-            <h2>Official FC Barcelona Store</h2>
-            <p>Authentic merchandise and exclusive collections</p>
-        </section>
+ 
 
         <section class="club-banner">FC BARCELONA</section>
     </main>
