--- a/kits.html
+++ b/kits.html
@@ -24,7 +24,6 @@
                 <li><a href="kits.html">Kits</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="equipment.html">Equipment</a></li>
             </ul>
         </nav>
         <div class="search-container">
@@ -34,35 +33,57 @@
     </header>
 
     <main>
+        <section class="kits">
+            <h2>Kits</h2>            
+        </section>
         <section class="featured-products">
             <h2>Kits Collection</h2>
             <div class="products-grid">
                 <article class="product-card">
                     <img src="images/kits1.jpg" alt="Home Jersey 2023/24" class="product-image">
                     <h3>Home Jersey 2023/24</h3>
-                    <p class="price">€89.99</p>
+                    <p class="price">ETB 6,319.34</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Away Jersey 2023/24" class="product-image">
-                    <h3>Away Jersey 2023/24</h3>
-                    <p class="price">€89.99</p>
+                    <img src="images/kits2.jpg" alt="Away Jersey 2023/24" class="product-image">
+                    <h3>Home Jersey 2023/24</h3>
+                    <p class="price">ETB 5,219.43</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Training Kit" class="product-image">
-                    <h3>Training Kit</h3>
-                    <p class="price">€69.99</p>
+                    <img src="images/kits4.jpg" alt="Training Kit" class="product-image">
+                    <h3> Kit</h3>
+                    <p class="price">ETB 2,459.45</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/ball.jpg" alt="Official Match Ball" class="product-image">
-                    <h3>Official Match Ball</h3>
-                    <p class="price">€29.99</p>
+                    <img src="images/kits3.jpg" alt="Official Match Ball" class="product-image">
+                    <h3>Away Kit</h3>
+                    <p class="price">ETB 7,629.56</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/kits5.jpg" alt="Official Match Ball" class="product-image">
+                    <h3>El Clasico Kit</h3>
+                    <p class="price">ETB 5,639.19</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/kits6.jpg" alt="Official Match Ball" class="product-image">
+                    <h3>El Clasico Kit</h3>
+                    <p class="price">ETB 6,669.77</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/kits7.jpg" alt="Official Match Ball" class="product-image">
+                    <h3>Away kit</h3>
+                    <p class="price">ETB 5,783.78</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
             </div>
         </section>
+        <section class="club-banner">FC BARCELONA</section>
     </main>
 
     <footer class="main-footer">
@@ -76,11 +97,15 @@
                 </ul>
             </div>
             <div class="footer-section">
-                <h4>CUSTOMER SERVICE</h4>
+                <h4>HELP CENTER</h4>
                 <ul>
                     <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Help Portal</a></li>
                     <li><a href="#">Shipping & Delivery</a></li>
                     <li><a href="#">Returns & Exchanges</a></li>
+                    <li><a href="#">Track order information</a></li>
+                    <li><a href="#">Order Issues</a></li>
+                    <li><a href="#">Account & website </a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -97,11 +122,13 @@
                     <a href="#" class="social-link"> <img src="images/fb_icon.png"></a>
                     <a href="#" class="social-link"> <img src="images/ig_icon.png"></a>
                     <a href="#" class="social-link"> <img src="images/x_icon.png"></a>
+                    <a href="#" class="social-link"> <img src="images/yt_icon.png"></a>
+                    <a href="#" class="social-link"> <img src="images/tt_icon.png"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 FC Barcelona. All rights reserved.</p>
+            <p>&copy; 2025 FC Barcelona. All rights reserved.</p>
         </div>
     </footer>
 
