--- a/training.html
+++ b/training.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training - FC Barcelona Store</title>
     <link rel="icon" type="image/png" href="images/fcb_logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header class="main-header">
@@ -24,7 +24,6 @@
                 <li><a href="kits.html">Kits</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="equipment.html">Equipment</a></li>
             </ul>
         </nav>
         <div class="search-container">
@@ -34,35 +33,58 @@
     </header>
 
     <main>
+        <section class="training">
+            <h2>Training</h2>
+                        
+        </section>
         <section class="featured-products">
             <h2>Training Collection</h2>
             <div class="products-grid">
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Training Jersey" class="product-image">
+                    <img src="images/training2.jpg" alt="Training Jersey" class="product-image">
                     <h3>Training Jersey</h3>
-                    <p class="price">€69.99</p>
+                    <p class="price">ETB 5,459.64</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Training Shorts" class="product-image">
-                    <h3>Training Shorts</h3>
-                    <p class="price">€39.99</p>
+                    <img src="images/training9.jpg" alt="Training Shorts" class="product-image">
+                    <h3>Training Shirt</h3>
+                    <p class="price">ETB 3,119.45</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Training Jacket" class="product-image">
-                    <h3>Training Jacket</h3>
-                    <p class="price">€79.99</p>
+                    <img src="images/training3.jpg" alt="Training Jacket" class="product-image">
+                    <h3>Training Kit</h3>
+                    <p class="price">ETB 4,239.88</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
                 <article class="product-card">
-                    <img src="images/trainin1.jpg" alt="Training Pants" class="product-image">
+                    <img src="images/training4.jpg" alt="Training Pants" class="product-image">
                     <h3>Training Pants</h3>
-                    <p class="price">€59.99</p>
+                    <p class="price">ETB 4,679.22</p>
                     <button class="buy-button">Buy Now</button>
                 </article>
+                <article class="product-card">
+                    <img src="images/training5.jpg" alt="Training Pants" class="product-image">
+                    <h3>Training Kits</h3>
+                    <p class="price">ETB 5,650.32</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/training7.jpeg" alt="Training Pants" class="product-image">
+                    <h3>Training kit</h3>
+                    <p class="price">ETB 2,194.62</p>
+                    <button class="buy-button">Buy Now</button>
+                </article>
+                <article class="product-card">
+                    <img src="images/training8.jpg" alt="Training Pants" class="product-image">
+                    <h3>Training Jersey</h3>
+                    <p class="price">ETB 3,659.29</p>
+                    <button class="buy-button">Buy Now</button>
+                </article> 
             </div>
         </section>
+        <section class="club-banner">FC BARCELONA</section>
     </main>
 
     <footer class="main-footer">
@@ -92,16 +114,30 @@
                 </ul>
             </div>
             <div class="footer-section">
+                <h4>HELP CENTER</h4>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Help Portal</a></li>
+                    <li><a href="#">Shipping & Delivery</a></li>
+                    <li><a href="#">Returns & Exchanges</a></li>
+                    <li><a href="#">Track order information</a></li>
+                    <li><a href="#">Order Issues</a></li>
+                    <li><a href="#">Account & website </a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
                 <h4>FOLLOW US</h4>
                 <div class="social-links">
                     <a href="#" class="social-link"> <img src="images/fb_icon.png"></a>
                     <a href="#" class="social-link"> <img src="images/ig_icon.png"></a>
                     <a href="#" class="social-link"> <img src="images/x_icon.png"></a>
+                    <a href="#" class="social-link"> <img src="images/yt_icon.png"></a>
+                    <a href="#" class="social-link"> <img src="images/tt_icon.png"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 FC Barcelona. All rights reserved.</p>
+            <p>&copy; 2025 FC Barcelona. All rights reserved.</p>
         </div>
     </footer>
 
