--- a/bestseller.html
+++ b/bestseller.html
@@ -195,11 +195,11 @@
             <div class="footer-section">
                 <h4>FOLLOW US</h4>
                 <div class="social-links">
-                    <a href="#" class="social-link"> <img src="images/fb_icon.png"></a>
-                    <a href="#" class="social-link"> <img src="images/ig_icon.png"></a>
-                    <a href="#" class="social-link"> <img src="images/x_icon.png"></a>
-                    <a href="#" class="social-link"> <img src="images/yt_icon.png"></a>
-                    <a href="#" class="social-link"> <img src="images/tt_icon.png"></a>
+                     <img src="images/fb_icon.png">
+                     <img src="images/ig_icon.png">
+                     <img src="images/x_icon.png">
+                     <img src="images/yt_icon.png">
+                     <img src="images/tt_icon.png">
                 </div>
             </div>
         </div>
